# PBJTPerpus

./: backend.rar  dataset_buku.csv  main.jsx  main.py  package-lock.json  pyproject.toml  rekomendasi.py  requirements.txt  setup_database.sql  tfidf.pkl
Downloads/fastapi-backend-main/: dataset_buku.csv  pyproject.toml
backend/: .gitignore  app.py  main.py  pyproject.toml  tfidf_vectorizer.pkl  wa.py
backend/backend/: Data Buku Perpus Baja - KHUSUS BUKU TA.csv  perpuspbjt.sql
frontend/: README.md  index.html  main.jsx  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: index.html  manifest.webmanifest  sw.js
frontend/dev-dist/assets/: index-Bd_m6oI8.js  index-CQKi-Da7.js  index-Duj42KAg.js
frontend/src/: App.jsx
frontend/src/components/: FormField.jsx  LoaderOverlay.jsx  Navbar.jsx  SplashScreen.jsx  StatusPill.jsx  Toast.jsx
frontend/src/hooks/: useLoader.js  useToast.js
frontend/src/pages/: BooksPage.jsx  BorrowPage.jsx  Carianggota.jsx  ChatBotPage.jsx  HomePage.jsx  LoginPage.jsx  MembersPage.jsx  ReturnPage.jsx  SearchBookPage.jsx  rekomendasi.jsx
frontend/src/utils/: api.js  helpers.js
