[project]
name = "fastapi-example"
version = "0.1.0"
requires-python = ">=3.12"


dependencies = [
    annotated-doc==0.0.4
    annotated-types==0.7.0
    anyio==4.13.0
    certifi==2026.4.22
    click==8.3.3
    colorama==0.4.6
    fastapi==0.136.1
    h11==0.16.0
    httpcore==1.0.9
    httpx==0.28.1
    idna==3.14
    joblib==1.5.3
    mysql-connector-python==9.7.0
    numpy==2.4.4
    pandas==3.0.3
    psycopg2-binary==2.9.12
    pydantic==2.13.4
    pydantic_core==2.46.4
    python-dateutil==2.9.0.post0
    python-multipart==0.0.28
    scikit-learn==1.8.0
    scipy==1.17.1
    six==1.17.0
    starlette==1.0.0
    threadpoolctl==3.6.0
    typing-inspection==0.4.2
    typing_extensions==4.15.0
    tzdata==2026.2
    uvicorn==0.46.0
]

